--- a/markdown/20200522w12.md
+++ b/markdown/20200522w12.md
@@ -6,6 +6,21 @@ Tags: 2020WCMJ
 Slug: 2020-wcm-w12-summary
 Author: 50833106
 ---
+Leo Editor 基本用法
+首先必須要在隨身程式系統的命令列視窗中, 以 leo 啟動 Leo Editor, 然後開啟 [wcmj2020] 倉儲 config 目錄中的 pelican.leo 檔案.
+
+由於 Leo Editor 是一個大綱管理系統, 淡黃色區域是大綱節點區, 淡紅色區是與各大綱對應的內文區, 而淡藍色則是 Log 輸出區.
+
+在 Leo Editor 中新增節點的指令: ctrl + i, 表示要 insert 一個新的節點.
+
+在 Leo Editor 中向右移動節點的方法: ctrl + r, 表示要將節點往 right (右) 移動.
+
+在 Leo Editor 中向左移動節點的方法: ctrl + l, 表示要將節點往 left (左) 移動.
+
+在 Leo Editor 中向上移動節點的方法: ctrl + u, 表示要將節點往 up (上) 移動.
+
+在 Leo Editor 中向下移動節點的方法: ctrl + d, 表示要將節點往 down (下) 移動.
+
 
 
 <!-- PELICAN_END_SUMMARY -->
