--- a/markdown/20200522w11.md
+++ b/markdown/20200522w11.md
@@ -1,4 +1,3 @@
----
 Title: 2020wcmj W11
 Date: 2020-05-22 14:00
 Category: Misc
@@ -6,6 +5,9 @@ Tags: 2020WCMJ
 Slug: 2020-wcm-w11-summary
 Author: 50833106
 ---
+ssh 之用法
+<!-- PELICAN_END_SUMMARY -->
+
 1.下載 Putty 工具組
 2.利用 y:\portablegit\bin\sh.exe 進入 shell 命令環境後, 以 ssh-keygen -t rsa -b 4096 -C "使用者學號"在 /y/home/.ssh 目錄下建立 id_rsa 與 id_rsa.pub 等 private key 與 public key,之後以 SciTE 開啟 id_rsa.pub 後, 將此 public key 的內容, 以新增添加到 Github.com 帳號下 personal settings -> SSH and GPG keys 頁面下.
 3.接下來要利用 puttygen.exe 將 id_rsa 轉為 Putty 可以解讀的 .ppk 格式, 並修改隨身系統的啟動批次檔案, 指定利用 putty 目錄下的 plink 執行 git 指令的網路代理設定.修改啟動的 start.bat 加入下列設定:
@@ -18,5 +20,3 @@ set GIT_SSH=%Disk%:\putty\plink.exe
 6.最後再將 wcmj2020 倉儲中 .git 目錄下的 config 檔案中的連線協定, 由 https 改為採 ssh 連線
 之後就可以透過近端的 .ppk private key 與 Github.com 上的 public key 對應, 無需輸入帳號密碼就可以進行 git push.
 
-
-<!-- PELICAN_END_SUMMARY -->
