--- a/markdown/20200522w12.md
+++ b/markdown/20200522w12.md
@@ -1,4 +1,3 @@
----
 Title: 2020wcmj W12
 Date: 2020-05-22 14:00
 Category: Misc
@@ -6,6 +5,10 @@ Tags: 2020WCMJ
 Slug: 2020-wcm-w12-summary
 Author: 50833106
 ---
+Leo Editor 基本用法
+
+<!-- PELICAN_END_SUMMARY -->
+
 Leo Editor 基本用法
 首先必須要在隨身程式系統的命令列視窗中, 以 leo 啟動 Leo Editor, 然後開啟 [wcmj2020] 倉儲 config 目錄中的 pelican.leo 檔案.
 
@@ -20,7 +23,3 @@ Leo Editor 基本用法
 在 Leo Editor 中向上移動節點的方法: ctrl + u, 表示要將節點往 up (上) 移動.
 
 在 Leo Editor 中向下移動節點的方法: ctrl + d, 表示要將節點往 down (下) 移動.
-
-
-
-<!-- PELICAN_END_SUMMARY -->
